[package]
name = "myknowledge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.59"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["fast-rng", "macro-diagnostics", "serde", "v4"] }
